Fix footer wrapping and about me selector errors
Fix footer section wraping and delete class name from <li> in social media class (about me section)

--- a/style.css
+++ b/style.css
@@ -426,7 +426,7 @@ body {
   margin-top: 32px;
 }
 
-.container-4 {
+.contact-us {
   display: flex;
   flex-direction: column;
   justify-content: center;
